...
import androidx.compose.ui.text.input.KeyboardType
import androidx.compose.ui.tooling.preview.Preview
import androidx.compose.ui.unit.dp
import com.example.tiptime.ui.theme.TipTimeTheme
import java.text.NumberFormat

const val TEST_TAG_BILL_AMOUNT = "TEST_TAG_BILL_AMOUNT"
const val TEST_TAG_PERCENTAGE = "TEST_TAG_PERCENTAGE"

class MainActivity : ComponentActivity() {
    override fun onCreate(savedInstanceState: Bundle?) {
        super.onCreate(savedInstanceState)
        setContent {
            TipTimeTheme {
...
